# AetherEngine

./: .gitignore  AUDIT.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
Templates/Blank/: .gitignore  CLAUDE.md  project.aeproj
Templates/Blank/Docs/: README.md  ai-assistant.md  modules-and-plugins.md  scenes-and-assets.md  scripting-cpp.md
Templates/Blank/Docs/reference/: agent-bridge.md  components.md
Templates/Blank/Source/: module_entry.cpp
Templates/Blank/assets/maps/: main.json
Templates/Blank/assets/scripts/: hello.json
Templates/FPS/: AGENTS.md  project.aeproj
Templates/FPS/Docs/: README.md  ai-assistant.md  scenes-and-assets.md  script-graphs.md  starter-kit-fps.md
Templates/FPS/Docs/reference/: script-nodes.md
Templates/FPS/assets/: input.json
Templates/FPS/assets/data/: weapons.json
Templates/FPS/assets/maps/: arena.json
Templates/FPS/assets/missions/: missions.json
Templates/FPS/assets/scripts/: game_flow.json  player_shoot.json  target.json
Templates/FPS/assets/ui/: hud.json
Templates/Sample/: project.aeproj
Templates/Sample/Docs/: scenes-and-assets.md
Templates/Sample/Docs/reference/: components.md
Templates/Sample/Plugins/OrbitFx/: plugin.json
Templates/Sample/Plugins/OrbitFx/Source/: CMakeLists.txt  PulseLight.cpp  PulseLight.h  module_entry.cpp
Templates/Sample/Source/: CMakeLists.txt  Rotator.cpp  Rotator.h
Templates/Sample/assets/: input.json
Templates/Sample/assets/anim/: fox.json
Templates/Sample/assets/data/: gameplay.json
Templates/Sample/assets/dialogue/: interrogation.json
Templates/Sample/assets/maps/: _stress.json  demo.json  mainmenu.json  sample.json
Templates/Sample/assets/materials/: energy.json
Templates/Sample/assets/missions/: missions.json
Templates/Sample/assets/props/: crystal.mtl
Templates/Sample/assets/scripts/: demo_orb.json  guard.json  intro.json  orb.json  player.json
Templates/Sample/assets/ui/: hud.json  mainmenu.json
Templates/SampleDocs/reference/: components.md
assets/entities/: Torus.json
assets/missions/: missions.json
shaders/: atmosphere.glsl  background.frag  background.vert  bloom_down.frag  bloom_up.frag  common.glsl  composite.frag  debug.frag  debug.vert  fullscreen.vert  fxaa.frag  ibl_brdf.frag  ibl_irradiance.frag  ibl_prefilter.frag  lum_adapt.frag  lum_down.frag  particle.frag  particle.vert  pbr.frag  pbr.vert  pbr_uniforms.glsl  pointdepth.frag  pointdepth.vert  shadow.frag  shadow.vert  skin_lut.frag  sky_capture.frag  ssao.frag  ssao_blur.frag  ssr.frag  ssr_resolve.frag  taa.frag  tonemap.frag  ui.frag  ui.vert  volumetric.frag
src/: ae.h  main_editor.cpp  main_runtime.cpp
src/ai/: behavior_tree.cpp  behavior_tree.h  nav_agent.h  nav_mesh.cpp  nav_mesh.h  nav_obstacle.h
src/ai_assist/: dev_team.cpp  dev_team.h  pulse_client.cpp  pulse_client.h
src/audio/: audio.cpp  audio.h  audio_components.h
src/core/: ae_api.h  capture.cpp  capture.h  gamepad.cpp  gamepad.h  guid.cpp  guid.h  http.cpp  http.h  input.h  json.cpp  json.h  log.cpp  log.h  math3d.cpp  math3d.h  paths.cpp  paths.h  process.cpp  process.h  window.cpp  window.h  window_sdl.cpp  window_sdl.h
src/editor/: agent_bridge.cpp  agent_bridge.h  ai_panel.cpp  ai_panel.h  anim_graph_panel.cpp  anim_graph_panel.h  bridge_commands.cpp  data_table_panel.cpp  data_table_panel.h  dialogue_graph.cpp  dialogue_graph.h  editor.cpp  editor.h  imgui_layer.cpp  imgui_layer.h  input_map_panel.cpp  input_map_panel.h  inspector_visitor.cpp  inspector_visitor.h  material_graph_panel.cpp  material_graph_panel.h  mission_panel.cpp  mission_panel.h  script_graph_panel.cpp  script_graph_panel.h  ui_designer_panel.cpp  ui_designer_panel.h
src/engine/: agent_bridge_help.cpp  agent_bridge_help.h  anim_graph.cpp  anim_graph.h  anim_ik.cpp  anim_ik.h  assets.cpp  assets.h  behaviors.h  camera_rigs.h  component.h  component_registry.cpp  component_registry.h  components.h  data_table.cpp  data_table.h  demo_input.cpp  demo_input.h  doc_gen.cpp  doc_gen.h  engine_modules.cpp  engine_modules.h  entity.h  game_module.cpp  game_module.h  input_actions.cpp  input_actions.h  mission.cpp  mission.h  module_build.cpp  module_build.h  packager.cpp  packager.h  particles.cpp  particles.h  plugin_manager.cpp  plugin_manager.h  project.cpp  project.h  reflect.h  (+7 more)
src/gl/: gl_api.cpp  gl_api.h
src/hub/: engine_update.cpp  engine_update.h  hub_main.cpp  launcher_state.cpp  launcher_state.h
src/narrative/: choice_ui.cpp  choice_ui.h  dialogue_player.cpp  dialogue_player.h  dialogue_scene.cpp  dialogue_scene.h  dialogue_trigger.h  mission_hud.cpp  mission_hud.h
src/physics/: physics.cpp  physics.h  physics_components.h
src/render/: debug_draw.cpp  debug_draw.h  gltf.cpp  gltf.h  image.cpp  image.h  material_graph.cpp  material_graph.h  mesh.cpp  mesh.h  model_fbx.cpp  model_import.h  model_obj.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
src/rhi/: rhi.h  rhi_gl.cpp  spirv_compile.cpp  spirv_compile.h  vulkan_context.cpp  vulkan_context.h  vulkan_probe.cpp  vulkan_probe.h
src/scene/: scene.h
src/script/: script_graph.cpp  script_graph.h
src/ui/: font.cpp  font.h  ui.cpp  ui.h  ui_document.cpp  ui_document.h  ui_document_component.h
tools/: ai_smoke.cpp  doc_gen.cpp  input_smoke.cpp  make_install.ps1  nav_smoke.cpp  phys_smoke.cpp  save_smoke.cpp  undo_smoke.cpp
tools/proof_demo/: STORYBOARD.md  proof_run.py
